syntax = "proto3";

package financio.trading;

import "trading/common.proto";

// Messages sent UI -> Trader to initiate trading operations.

message ConnectReq {
  string host      = 1;
  int32  port      = 2;
  int32  client_id = 3;
}

message MarketDataReq {
  string symbol    = 1;
  string exchange  = 2;
  string currency  = 3;
  string sec_type  = 4;
}

message PlaceOrderReq {
  double quantity   = 1;
  double limit_px   = 2;
  double stop_px    = 3;
  string action     = 4; // "BUY"/"SELL"
  string order_type = 5; // "MKT","LMT","STP"
}

message HistoricalReq {
  string symbol       = 1;
  string exchange     = 2;
  string currency     = 3;
  string sec_type     = 4;
  string duration_str = 5;
  string bar_size     = 6;
  string what_to_show = 7;
  int32  use_rth      = 8;
}

message ClientRequest {
  RequestType type = 1;
  int32 id         = 2;
  oneof payload {
    ConnectReq     connect_req        = 10;
    MarketDataReq  subscribe_md       = 11;
    MarketDataReq  unsubscribe_md     = 12;
    PlaceOrderReq  place_order        = 13;
    int32          cancel_order_id    = 14;
    HistoricalReq  historical_req     = 15;
  }
}
